// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`array.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const arr1 = [1,2,3,4];
const arr2 = [1, 2, 3, 4];

=====================================output=====================================
const arr1 = [1, 2, 3, 4];
const arr2 = [1, 2, 3, 4];

================================================================================
`;

exports[`array.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const arr1 = [1,2,3,4];
const arr2 = [1, 2, 3, 4];

=====================================output=====================================
const arr1 = [1, 2, 3, 4];
const arr2 = [1, 2, 3, 4];

================================================================================
`;

exports[`object.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const obj1 = {a:1, b:2, c:3}
const obj2 = { a:1, b:2, c:3 };

=====================================output=====================================
const obj1 = {a: 1, b: 2, c: 3};
const obj2 = {a: 1, b: 2, c: 3};

================================================================================
`;

exports[`object.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const obj1 = {a:1, b:2, c:3}
const obj2 = { a:1, b:2, c:3 };

=====================================output=====================================
const obj1 = { a: 1, b: 2, c: 3 };
const obj2 = { a: 1, b: 2, c: 3 };

================================================================================
`;
